--- a/UniPro/ClientApp/src/app/auth/login/login.component.html
+++ b/UniPro/ClientApp/src/app/auth/login/login.component.html
@@ -13,7 +13,7 @@
         <label class="sr-only" for="email">E-Mail Address</label>
         <div class="input-group mb-2 mr-sm-2 mb-sm-0">
           <div class="input-group-addon" style="width: 2.6rem"><fa-icon [icon]="faAt" size="2x"></fa-icon></div>
-          <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required
+          <input [(ngModel)]="email" type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required
             autofocus>
         </div>
       </div>
@@ -33,7 +33,7 @@
         <label class="sr-only" for="password">Password</label>
         <div class="input-group mb-2 mr-sm-2 mb-sm-0">
           <div class="input-group-addon" style="width: 2.6rem"><fa-icon [icon]="faKey" size="2x"></fa-icon></div>
-          <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
+          <input [(ngModel)]="password" type="password" name="password" class="form-control" id="password" placeholder="Password" required>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
   <div class="row" style="padding-top: 1rem">
     <div class="col-md-3"></div>
     <div class="col-md-5">
-      <button type="submit" class="btn btn-success btn-lg form-control"><i class="fa fa-sign-in"></i> Login</button>
+      <button (click)="login ()" class="btn btn-success btn-lg form-control"><i class="fa fa-sign-in"></i> Login</button>
     </div>
   </div>
   <div class="row" style="padding-top: 1rem">
