--- a/UniPro/ClientApp/src/app/pages/footer/footer.component.html
+++ b/UniPro/ClientApp/src/app/pages/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer text-center">
-    <small class="">Copyright &copy; {{ currentYear }} Some Company Inc.</small>
+    <small class="">Copyright &copy; 2020 Some Company Inc.</small>
   
     <!--<nav>
       <ul>
